React 블로그 3일차: 글 기본 레이아웃, ts -> js

--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,5 @@
-.page-layout {
-}
-
-.sidebar {
+#main-layout {
     display: flex;
-    position: absolute;
-    width: 0px;
-    bottom: 0px;
-    top: 0px;
-    z-index: 1;
-    overflow-x: hidden;
-    transition: 0.5s;
-}
-.SidebarButton {
-    position: absolute;
-    top: 10px;
-    left: 5px;
-    background-color: cyan;
-    z-index: 2;
-}
-
-.topmenu {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    height: 20vh;
     transition: margin-left 0.5s;
-}
-.mainpage {
-    position: absolute;
-    top: 20vh;
-    left: 0%;
-    bottom: 0px;
-    right: 0px;
-    transition: margin-left 0.5s;
+    margin-left: 0vw;
 }
