--- a/src/component/Sidebar.css
+++ b/src/component/Sidebar.css
@@ -1,11 +1,16 @@
 .Sidebar {
-    background-color: purple;
-    font-size: 20px;
-    color: white;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    align-items: top;
     justify-content: center;
-    min-height: 100%;
-    min-width: 100%;
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    color: white;
+    background-color: #222; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
 }
